fix sponsor logo coloring in dark mode

--- a/assets/css/addon.css
+++ b/assets/css/addon.css
@@ -517,7 +517,7 @@ lead {
   clear: both;
 }
 
-#sponsors ul {
+.sponsors ul {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -526,23 +526,24 @@ lead {
   /* justify-content: space-between; */
 }
 
-#sponsors li {
+.sponsors li {
   border: 1px solid var(--primary-region-border-color);
   border-radius: var(--primary-region-border-radius);
+  background-color: white;
 }
   
-#sponsors ul li a {
+.sponsors ul li a {
   display: block;
   color: var(--application-foreground-color);
   padding: 8px 16px
 }
 
-#sponsors.sponsors150 svg {
+.sponsors.sponsors150 svg {
   width: 100px;
   height: 100px;
 }
 
-#sponsors.sponsors500 svg {
+.sponsors.sponsors500 svg {
   width: 300px;
   height: 300px;
 }
